<resources>
    <string name="app_name">Mocatto Pets</string>
    <string name="nombre">Nombre</string>
    <string name="especie">Especie</string>
    <string name="race">Raza</string>
    <string name="gender">Sexo</string>
    <string name="fecha_nacimiento">Fecha de Nacimiento</string>
    <string name="fur">Pelaje</string>
    <string name="desc_list_item_icon">menu</string>
    <string name="title_activity_menu_hamb">MenuHambActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Mascota 1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="foodGrams">Cantidad (gr x día)</string>
    <string name="frecuencia_de_alimentacion">Frecuencia de Alimentación</string>
    <string name="foodBrand">Marca</string>
    <string name="cual">Cual</string>
    <string name="foodBuyRegularity">¿Cada cuanto días compra alimento?</string>
    <string name="lastVaccine">Ultima Vacuna</string>
    <string name="vaccine">Vacunas</string>
    <string name="vacuna_tos_de_perrera">Cuenta con vacuna Tos de Perrera</string>
    <string name="fecha_vacuna_tos_de_perrera">Ultima Vacuna Tos de Perrera</string>
    <string name="vacuna_leucemia_y_sida_felino">Cuenta con vacuna Leucemia y SIDA felino</string>
    <string name="fecha_vacuna_leucemia_y_sida">Ultima Vacuna Leucemia y SIDA </string>
    <string name="fecha_ultima_desparacitada">Ultima desparacitada</string>
    <string name="antiFlea">Usa Antipulgas frecumentemente</string>
    <string name="fecha_ultima_visita_al_veterinario">Fecha Ultima Visita al Veterinario</string>
    <string name="sterilized">Esta Esterilizado(a)</string>
    <string name="frecuencia_del_banio">Frecuencia del baño \n (En días)</string>
    <string name="lastBath">Ultimo Baño</string>
    <string name="bathLocation">Donde</string>
    <string name="quieres_que_te_recordemos">Quieres que te recordemos algo adicional</string>
    <string name="event">Evento</string>
    <string name="regularity">Cada cuanto</string>
    <string name="lastFoodBuyDate">Ultima Compra de Alimento</string>
    <string name="siguiente">Siguiente   </string>
    <string name="fecha_evento">Fecha</string>
    <string name="nombre_del_evento">Nombre del evento</string>
    <string name="ubicacion">Ubicación</string>
    <string name="title_activity_maps">Map</string>
    <string name="recordar_minutos_antes">Recordar (minutos antes)</string>
    <string name="hora">Hora</string>
    <string name="dog">Canino</string>
    <string name="cat">Felino</string>
    <string name="aves">Aves</string>
    <string name="email">Correo Electrónico</string>
    <string name="nombre_y_apellidos">Nombre</string>
    <string name="contrasena">Contraseña</string>
    <string name="repetir_contrasena">Repetir Contraseña</string>
    <string name="ciudad">Ciudad</string>
    <string name="pais">Pais</string>
    <string name="policies_text1">Este acuerdo entre las partes fue escrito en español en Colombia. Fecha de ultima versión: 02 de agosto de 2016</string>
    <string name="policies_text2">Declaración de derechos y responsabilidades</string>
    <string name="policies_text3">Esta Declaración de derechos y responsabilidades (Declaración, Condiciones) tiene su origen en los Valores de Mocatto Pets y contiene las condiciones del servicio entre la empresa y los usuarios, así como las foodBrand, los productos y los servicios. Al usar los servicios de la aplicación Mocatto Pets o al acceder a ellos, muestras tu conformidad con esta Declaración, } que se actualiza periódicamente según se estipula en la sección 8 más adelante.</string>
    <string name="policies_text4">1. Privacidad</string>
    <string name="policies_text5">Tu privacidad es muy importante para nosotros. Te recomendamos que leas nuestra Política de datos y que la utilices para poder tomar decisiones fundamentadas.</string>
    <string name="policies_text6">2. Compartir el contenido y la información</string>
    <string name="policies_text7">Eres el propietario de todo el contenido y la información que publicas en Mocatto Pets. Asimismo: Cuando publicas contenido o información, significa que permites que todos los usuarios de Mocatto Pets, accedan a dicha información, la utilicen y la asocien a ti (es decir, a el nombre de tu mascota y la foto de su perfil). Siempre valoramos tus comentarios o sugerencias acerca de Mocatto Pets, pero debes entender que podríamos utilizarlos sin obligación de compensarte por ellos (del mismo modo que tú no tienes obligación de proporcionarlos).</string>
    <string name="policies_text8">3. Seguridad</string>
    <string name="policies_text9">En Mocatto Pets hacemos todo lo posible para que sea una aplicación, segura, pero esto es algo que no podemos garantizar, por esta razón, te pedimos: \n• No publicar comunicaciones comerciales no autorizadas (como Spam). \n• No recolectar información o contenido de others usuarios utilizando medios automáticos \n• No cargar virus ni código malicioso de ningún tipo. \n• No publicar contenido que contenga lenguaje que incite al odio, resulte intimidatorio, sea pornográfico, incite a la violencia o contenga desnudos o violencia gráfica o injustificada. \n• No utilizar la aplicación para actos ilícitos, engañosos, malintencionados o discriminatorios. \n• No realizar ninguna acción que pudiera inhabilitar, sobrecargar o afectar al funcionamiento correcto de la aplicación \n• No facilitar, ni fomentar el incumplimiento de esta Declaración ni de nuestras políticas.</string>
    <string name="_4_policies_text10">4. Protección de los derechos de otras personas</string>
    <string name="policies_text11">Respetamos los derechos de otras personas y esperamos que tú hagas lo mismo, te pedimos: \n• No publicar contenido ni realizarás ninguna acción en Mocatto Pets que infrinja o vulnere los derechos de terceros o que vulnere la ley de algún modo. \n• Podemos retirar cualquier contenido que vaya en contra de las políticas de Mocatto Pets o se considere que vulnera los derechos de terceros. \n• Si vulneras repetidamente los derechos de propiedad intelectual de otras personas, inhabilitaremos tu cuenta cuando lo estimemos oportuno. \n• No utilizarás nuestros derechos de autor, nuestras marcas comerciales ni ninguna foodBrand que se parezca a las nuestras, excepto si lo permiten nuestras Normas de uso de las marcas de forma expresa o si recibes un consentimiento previo por escrito de Mocatto Pets. \n• No publicarás los documentos de identidad ni la información financiera confidencial de nadie.</string>
    <string name="_5_policies_text12">5. Dispositivos móviles y de others tipos</string>
    <string name="policies_text14">Actualmente los servicios de Mocatto Pets son totalmente gratuitos, pero pueden acarrear costos con tu operador, como consumo de datos.</string>
    <string name="_6_policies_text15">6. Acerca de los anuncios u otro contenido comercial</string>
    <string name="policies_text16">Nuestro objetivo es publicar anuncios y otro contenido comercial o patrocinado que sea valioso para nuestros usuarios y anunciantes. Para ayudarnos a lograrlo, aceptas lo siguiente: \n• Nos concedes permiso para usar tu nombre, foto del perfil, contenido e información en relación con contenido comercial, patrocinado o asociado (como una foodBrand que te guste) que publiquemos u optimicemos. Esto significa, por ejemplo, que permites que una empresa u otra entidad nos pague por mostrar tu nombre y/o foto del perfil con tu contenido o información sin que recibas ninguna compensación por ello. Si seleccionaste un público específico para tu contenido o información, respetaremos tu elección cuando lo usemos. \n• No proporcionamos tu contenido o información a anunciantes sin tu consentimiento. \n• Entiendes que es posible que no siempre identifiquemos las comunicaciones.</string>
    <string name="_7_policies_text18">7. Disposiciones especiales aplicables al software</string>
    <string name="policies_text19">Si descargas o utilizas nuestro software, como una aplicación, aceptas que, periódicamente, pueden descargarse e instalarse mejoras, actualizaciones y funciones adicionales con el fin de mejorar, optimizar y desarrollar el software. No modificarás nuestro código fuente ni llevarás a cabo con él trabajos derivados, como descompilar o intentar de algún otro modo extraer dicho código fuente, excepto en los casos permitidos expresamente por una licencia de código abierto o si te damos nuestro consentimiento expreso por escrito.</string>
    <string name="policies_text20">8. Enmiendas</string>
    <string name="policies_text21">• Te notificaremos antes de realizar cambios en estas condiciones \n• Tu uso continuado de la aplicación después de recibir la notificación de cambios de nuestras condiciones, políticas o normas supone la aceptación de las enmiendas.</string>
    <string name="policies_text22">9. Terminación</string>
    <string name="policies_text23">Si infringes la esencia o el espíritu de esta Declaración, creas riesgos de cualquier tipo para Mocatto Pets o nos expones a posibles responsabilidades jurídicas, podríamos impedirte el acceso a Mocatto Pets total o parcialmente.</string>
    <string name="policies_text24">10. Conflictos</string>
    <string name="policies_text25">Resolverás cualquier demanda o conflicto que tengas con nosotros surgida de la presente Declaración o con Mocatto Pets, o relacionada con estos, se resolverán por un Tribunal de Arbitramento, designado por La Cámara de Comercio de Medellín, a solicitud de cualquiera de las “partes”, según las siguientes reglas: \na. El Tribunal de Arbitramento estará integrado por un (1) árbitro, designado por la Cámara de Comercio de Medellín, de conformidad con la ley, quien será ciudadano colombiano y abogado. \nb. La Convocatoria, constitución, trámite y procedimiento se regirán conforme al reglamento establecido por el Centro de Conciliación y Arbitraje de la Cámara de Comercio de Medellín. \nc. El idioma para la convocatoria, constitución, trámite y procedimiento será el español. \nd. El Tribunal fallará en derecho y aplicará como norma sustancial la ley Colombiana, en especial lo contenido en los Códigos de Comercio, Civil y de Procedimiento Civil colombianos. \ne. El Tribunal tendrá su sede en la ciudad de Medellín, Colombia, en el Centro de Conciliación y Arbitraje de la Cámara de Comercio de esa ciudad. \nf. Los costos y gastos del arbitramento serán sufragados por la parte que no resultare favorecida. \n• No somos responsables de ningún contenido que se considere ofensivo, inapropiado, obsceno, ilegal o inaceptable que puedas encontrar en Mocatto Pets. No somos responsables de la conducta de ningún usuario de la aplicación, tanto dentro como fuera de Mocatto Pets. \n• Intentamos mantener a Mocatto Pets en funcionamiento, sin errores y seguro, pero lo utilizas la aplicación bajo tu propia responsabilidad.</string>
    <string name="policies_text26">11. Otras disposiciones</string>
    <string name="policies_text27">• Los tiempos de programación de los de los recordatorios, los consejos y sugerencias sobre el bienestar, salud y alimentación de tu mascota, son realizados por veterinarios especializados, pero en ningún momento son validos como plan medico, de vacunación o desparasitación, mucho menos un plan alimenticio. \n• Cualquier inquietud medica, debe ser consultada con su veterinario. \n• Mocatto Pets no es responsable de cualquier inconveniente medico que se pueda presentar con su mascota.</string>
    <string name="policies_text28">Al utilizar los Servicios de Mocatto Pets o al acceder a ellos, nos permites recopilar y usar tu contenido e información de acuerdo con la Política de datos, que se actualiza periódicamente.</string>
    <string name="condiciones_politicas_titlle">Condiciones y Políticas</string>
</resources>