<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
tools:context="com.mocatto.fragments.PoliciesFragment"
android:background="@color/colorPrimary">

<ScrollView
    android:id="@+id/scrollViewAppConf"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlack">


        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/condiciones_politicas_titlle"
            android:layout_alignParentTop="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:textSize="38dp"
            android:textColor="@android:color/white"
            android:typeface="sans"
            android:textStyle="bold"
            android:id="@+id/titleAppConf" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/policies_text1"
            android:id="@+id/text1AppConf"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            android:typeface="sans"
            android:textSize="20dp"
            android:layout_below="@+id/titleAppConf"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/policies_text2"
            android:id="@+id/politicaText1AppConf"
            android:layout_marginTop="20dp"
            android:typeface="sans"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/text1AppConf"
            android:layout_alignStart="@+id/titleAppConf"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/policies_text3"
            android:id="@+id/politicaText2AppConf"
            android:layout_marginTop="5dp"
            android:typeface="sans"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/politicaText1AppConf"
            android:layout_alignStart="@+id/titleAppConf" />

        <!--TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/policies_text3_part_2"
            android:id="@+id/politicaText2AppConf_part_2"
            android:typeface="sans"
            android:textSize="20dp"
            android:textStyle="bold|italic"
            android:textColor="@android:color/holo_red_dark"
            android:layout_alignRight="@+id/politicaText2AppConf" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/policies_text3_part_3"
            android:id="@+id/politicaText2AppConf_part_3"
            android:typeface="sans"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:layout_alignRight="@+id/politicaText2AppConf_part_2" /-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/policies_text4"
            android:id="@+id/politicaText3AppConf"
            android:layout_marginTop="20dp"
            android:typeface="sans"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/politicaText2AppConf"
            android:layout_alignStart="@+id/titleAppConf"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/policies_text5"
            android:id="@+id/politicaText4AppConf"
            android:layout_marginTop="5dp"
            android:typeface="sans"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/politicaText3AppConf"
            android:layout_alignStart="@+id/titleAppConf" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/policies_text6"
            android:id="@+id/politicaText5AppConf"
            android:layout_marginTop="20dp"
            android:typeface="sans"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/politicaText4AppConf"
            android:layout_alignStart="@+id/titleAppConf"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/policies_text7"
            android:id="@+id/politicaText6AppConf"
            android:layout_marginTop="5dp"
            android:typeface="sans"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/politicaText5AppConf"
            android:layout_alignStart="@+id/titleAppConf" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/policies_text8"
            android:id="@+id/politicaText7AppConf"
            android:layout_marginTop="20dp"
            android:typeface="sans"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/politicaText6AppConf"
            android:layout_alignStart="@+id/titleAppConf"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/policies_text9"
            android:id="@+id/politicaText8AppConf"
            android:layout_marginTop="5dp"
            android:typeface="sans"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/politicaText7AppConf"
            android:layout_alignStart="@+id/titleAppConf" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/_4_policies_text10"
            android:id="@+id/politicaText9AppConf"
            android:layout_marginTop="20dp"
            android:typeface="sans"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/politicaText8AppConf"
            android:layout_alignStart="@+id/titleAppConf"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/policies_text11"
            android:id="@+id/politicaText10AppConf"
            android:layout_marginTop="5dp"
            android:typeface="sans"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/politicaText9AppConf"
            android:layout_alignStart="@+id/titleAppConf" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/_5_policies_text12"
            android:id="@+id/politicaText11AppConf"
            android:layout_marginTop="20dp"
            android:typeface="sans"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/politicaText10AppConf"
            android:layout_alignStart="@+id/titleAppConf"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/policies_text14"
            android:id="@+id/politicaText12AppConf"
            android:layout_marginTop="5dp"
            android:typeface="sans"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/politicaText11AppConf"
            android:layout_alignStart="@+id/titleAppConf" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/_6_policies_text15"
            android:id="@+id/politicaText13AppConf"
            android:layout_marginTop="20dp"
            android:typeface="sans"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/politicaText12AppConf"
            android:layout_alignStart="@+id/titleAppConf"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/policies_text16"
            android:id="@+id/politicaText14AppConf"
            android:layout_marginTop="5dp"
            android:typeface="sans"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/politicaText13AppConf"
            android:layout_alignStart="@+id/titleAppConf" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/_7_policies_text18"
            android:id="@+id/politicaText15AppConf"
            android:layout_marginTop="20dp"
            android:typeface="sans"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/politicaText14AppConf"
            android:layout_alignStart="@+id/titleAppConf"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/policies_text19"
            android:id="@+id/politicaText16AppConf"
            android:layout_marginTop="5dp"
            android:typeface="sans"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/politicaText15AppConf"
            android:layout_alignStart="@+id/titleAppConf" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/policies_text20"
            android:id="@+id/politicaText17AppConf"
            android:layout_marginTop="20dp"
            android:typeface="sans"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/politicaText16AppConf"
            android:layout_alignStart="@+id/titleAppConf"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/policies_text21"
            android:id="@+id/politicaText18AppConf"
            android:layout_marginTop="5dp"
            android:typeface="sans"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/politicaText17AppConf"
            android:layout_alignStart="@+id/titleAppConf" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/policies_text22"
            android:id="@+id/politicaText19AppConf"
            android:layout_marginTop="20dp"
            android:typeface="sans"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/politicaText18AppConf"
            android:layout_alignStart="@+id/titleAppConf"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/policies_text23"
            android:id="@+id/politicaText20AppConf"
            android:layout_marginTop="5dp"
            android:typeface="sans"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/politicaText19AppConf"
            android:layout_alignStart="@+id/titleAppConf" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/policies_text24"
            android:id="@+id/politicaText21AppConf"
            android:layout_marginTop="20dp"
            android:typeface="sans"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/politicaText20AppConf"
            android:layout_alignStart="@+id/titleAppConf"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/policies_text25"
            android:id="@+id/politicaText22AppConf"
            android:layout_marginTop="5dp"
            android:typeface="sans"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/politicaText21AppConf"
            android:layout_alignStart="@+id/titleAppConf" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/policies_text26"
            android:id="@+id/politicaText23AppConf"
            android:layout_marginTop="20dp"
            android:typeface="sans"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/politicaText22AppConf"
            android:layout_alignStart="@+id/titleAppConf"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/policies_text27"
            android:id="@+id/politicaText24AppConf"
            android:layout_marginTop="5dp"
            android:typeface="sans"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/politicaText23AppConf"
            android:layout_alignStart="@+id/titleAppConf" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/policies_text28"
            android:id="@+id/politicaText25AppConf"
            android:layout_marginTop="30dp"
            android:typeface="sans"
            android:textSize="22dp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/politicaText24AppConf"
            android:layout_alignStart="@+id/titleAppConf"
            android:textStyle="bold"/>

    </RelativeLayout>

</ScrollView>

</RelativeLayout>
