<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mocatto.CreateAccountActivity"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite">

    <ScrollView
        android:id="@+id/scrollViewCrearEvento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite">

        <LinearLayout
            android:id="@+id/layoutGlobalCalendario"
            android:background="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:id="@+id/textView6"
                style="@style/textview_style"
                android:visibility="visible" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/txtMail"
                style="@style/edittext_style"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_y_apellidos"
                android:id="@+id/lbNombre"
                style="@style/textview_style"
                android:visibility="visible" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtNombre"
                style="@style/edittext_style"
                android:visibility="visible" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/pais"
                android:id="@+id/lblPais"
                style="@style/textview_style"
                android:layout_centerHorizontal="true" />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spPais"
                style="@style/spinner_style"
                android:textColor="@color/abc_secondary_text_material_light"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/ciudad"
                android:id="@+id/lblCiudad"
                style="@style/textview_style"
                android:layout_centerHorizontal="true" />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spCiudad"
                style="@style/spinner_style"
                android:textColor="@color/abc_secondary_text_material_light"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contrasena"
                android:id="@+id/lbContrasenia"
                style="@style/textview_style"
                android:visibility="visible" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/txtContrasenia"
                style="@style/edittext_style" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repetir_contrasena"
                android:id="@+id/textView9"
                style="@style/textview_style"
                android:visibility="visible" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/txtRepetirContrasenia"
                style="@style/edittext_style" />

            <Button
                android:layout_width="262dp"
                android:layout_height="59dp"
                android:id="@+id/btnCrearCuenta"
                android:typeface="sans"
                android:textSize="20dp"
                android:background="@drawable/btn_registrar"
                android:layout_gravity="center" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
